Make labels inline-block so they wrap correctly

--- a/assets/css/peerraiser-admin.css
+++ b/assets/css/peerraiser-admin.css
@@ -66,7 +66,7 @@
 }
 /* CMB2 */
 .peerraiser-form .cmb-th label {
-    display: inline;
+    display: inline-block;
     position: relative;
     padding-left: 8px;
 }
